--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <div class="row align-items-center" *ngIf="screenSize >= 949">
+    <div class="row align-items-center d-flex justify-content-center" *ngIf="screenSize >= 949">
      
       <div class="col-md-2">
         <p><strong>Turma:</strong> ADS0301M</p>
